GNOME Bugzilla – Bug 725749
Critical warning in snapshot service
Last modified: 2014-03-06 08:36:13 UTC
(epiphany:15788): GLib-GIO-CRITICAL **: g_simple_async_result_set_error: assertion 'G_IS_SIMPLE_ASYNC_RESULT (simple)' failed Program received signal SIGTRAP, Trace/breakpoint trap. 0x00007fffef271f6f in _g_log_abort (breakpoint=1) at gmessages.c:308 308 G_BREAKPOINT (); Missing separate debuginfos, use: debuginfo-install gmp-5.1.2-2.fc20.x86_64 libXres-1.0.7-2.fc20.x86_64 libxcb-1.10-1.fc21.x86_64 nettle-2.7.1-3.fc20.x86_64 trousers-0.3.11.2-1.fc20.x86_64 (gdb) back
+ Trace 233273
I think we should be disconnecting from the "load-failed" signal in the snapshot service, and we currently don't. Carlos, what do you think?
Created attachment 271072 [details] [review] ephy-snapshot-service: disconnect from "load-failed" signal Otherwise we have a dangling handler with webviews that are unrelated to the async result at hand.
Attachment 271072 [details] pushed as fb84c77 - ephy-snapshot-service: disconnect from "load-failed" signal
I think we should not ref the web view in any case, and use a weak pointer instead, checking if it's null before trying to use it and cancelling the async operation when it becomes null.
Yes, that probably makes sense.