ephy-snapshot-service: disconnect from "load-failed" signal

Otherwise we have a dangling handler with webviews that are
unrelated to the async result at hand.

https://bugzilla.gnome.org/show_bug.cgi?id=725749